--- a/style/stylecard.css
+++ b/style/stylecard.css
@@ -1,43 +1,26 @@
-.photo-Album{
+.photo-album{
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap;    
 }
 
 .photo-frame{
+    height: 400px;
     width: 300px;
-    height: 300px;
     border: 2px solid goldenrod;
-    border-radius: 10px;
-    position: relative;
-    margin: 15px;
-    overflow: hidden;
+    border-radius: 7px;
+    padding: 4px;  
+    margin: 10px;  
 }
+
 .photo img{
     width: 100%;
-    border-radius: 10px;
-}
-.photo-datail{
+    border-radius: 7px;
+    }
+
+.details{
     padding: 10px;
-    display: none;
-    position: absolute;
-    top: 0;
 }
 
-.photo-frame:hover .photo-datail{
-    display: block;
-    background-color: rgba(218, 165, 32, 0.178)
-}
-
-.photo-datail h3{
-    background-color: black;
-    color: white;
-    padding: 5px;
-}
-.photo-datail p{
-    color: white;
-}
-
-.photo-frame:hover .photo{
-    transform: scale(1.2);
-    transition: 1s;
+.color{
+    color: rgb(20, 20, 102);
 }
